use cf-release for promotion [#138544149]
Signed-off-by: Brady Love <blove@pivotal.io>

--- a/pipelines/loggregator.yml
+++ b/pipelines/loggregator.yml
@@ -858,8 +858,7 @@ jobs:
       trigger: true
       passed:
       - lats
-      - cats
-      - wats
+      - cf-release-cats
   - task: promote
     config:
       image_resource:
