--- a/scripts.yml
+++ b/scripts.yml
@@ -135,6 +135,20 @@ statsd_units: |
     go install github.com/onsi/ginkgo/ginkgo
     ginkgo -r -race -randomizeAllSpecs ./src/github.com/cloudfoundry/statsd-injector
   popd
+scalable_syslog_tests: |
+  #!/bin/bash
+
+  set -e -x
+
+  rm -rf scalable-syslog-release/src/github.com/cloudfoundry-incubator/scalable-syslog/{*,.git}
+  cp -r scalable-syslog/. scalable-syslog-release/src/github.com/cloudfoundry-incubator/scalable-syslog/
+
+  pushd scalable-syslog-release
+    export GOPATH="$PWD"
+    export PATH="$GOPATH/bin:$PATH"
+    go install github.com/onsi/ginkgo/ginkgo
+    ginkgo -r -race -randomizeAllSpecs ./src/github.com/cloudfoundry-incubator/scalable-syslog
+  popd
 bosh_hm_forwarder_units: |
   #!/bin/bash
 
