--- a/pipelines/scalable-syslog.yml
+++ b/pipelines/scalable-syslog.yml
@@ -73,7 +73,7 @@ jobs:
         args:
         - -c
         - {{update_submodule}}
-  - task: commit
+  - task: sync-package-spec
     config:
       platform: linux
       image_resource:
@@ -83,9 +83,27 @@ jobs:
       inputs:
       - name: updated-scalable-syslog-release
       outputs:
+      - name: synced-scalable-syslog-release
+      params:
+        OUTPUT: synced-scalable-syslog-release
+      run:
+        path: bash
+        args:
+        - -c
+        - {{scalable_syslog_sync_package_specs}}
+  - task: commit
+    config:
+      platform: linux
+      image_resource:
+        type: docker-image
+        source:
+          repository: loggregator/go17
+      inputs:
+      - name: synced-scalable-syslog-release
+      outputs:
       - name: bumped-scalable-syslog-release
       params:
-        SOURCE: updated-scalable-syslog-release
+        SOURCE: synced-scalable-syslog-release
         PATHS: src/github.com/cloudfoundry-incubator/scalable-syslog
         COMMIT_MESSAGE: "Bump scalable-syslog"
         OUTPUT: bumped-scalable-syslog-release
