fail smokes if cf target fails

--- a/pipelines/smoke-tests.yml
+++ b/pipelines/smoke-tests.yml
@@ -21,6 +21,7 @@ jobs:
         - -c
         - |
           #!/bin/bash
+          set -e
 
           # target api
           cf_api="api.run.pivotal.io"
