--- a/pipelines/smoke-tests.yml
+++ b/pipelines/smoke-tests.yml
@@ -35,8 +35,11 @@ jobs:
           rm -f output.txt
           cf logs mylogspinner > output.txt 2>&1 &
           sleep 30 #wait 30 seconds for socket connection
+
+          cycles=10000
+          delay_us=2
           # curl my logspinner
-          curl 'mylogspinner.cfapps.io?cycles=10000&delay=2us'
+          curl "mylogspinner.cfapps.io?cycles=${cycles}&delay=${delay_us}us"
 
           sleep 300 # wait for a bit
 
@@ -48,9 +51,31 @@ jobs:
           curl  -X POST -H "Content-type: application/json" \
           -d "{ \"series\" :
                    [{\"metric\":\"smoke_test.loggregator.msg_count\",
-                    \"points\":[[$currenttime, $msg_count]],
+                    \"points\":[[${currenttime}, ${msg_count}]],
                     \"type\":\"gauge\",
-                    \"host\":\"$cf_api\",
+                    \"host\":\"${cf_api}\",
+                    \"tags\":[]}
+                  ]
+              }" \
+          'https://app.datadoghq.com/api/v1/series?api_key='{{datadog-api-key}}
+
+          curl  -X POST -H "Content-type: application/json" \
+          -d "{ \"series\" :
+                   [{\"metric\":\"smoke_test.loggregator.delay\",
+                    \"points\":[[${currenttime}, ${delay_us}]],
+                    \"type\":\"gauge\",
+                    \"host\":\"${cf_api}\",
+                    \"tags\":[]}
+                  ]
+              }" \
+          'https://app.datadoghq.com/api/v1/series?api_key='{{datadog-api-key}}
+
+          curl  -X POST -H "Content-type: application/json" \
+          -d "{ \"series\" :
+                   [{\"metric\":\"smoke_test.loggregator.cycles\",
+                    \"points\":[[${currenttime}, ${cycles}]],
+                    \"type\":\"gauge\",
+                    \"host\":\"${cf_api}\",
                     \"tags\":[]}
                   ]
               }" \
