Use master branch of diego-release
Signed-off-by: Warren Fernandes <wfernandes@pivotal.io>

--- a/pipelines/loggregator.yml
+++ b/pipelines/loggregator.yml
@@ -32,7 +32,7 @@ resources:
   type: git
   source:
     uri: https://github.com/cloudfoundry/diego-release
-    branch: release-candidate
+    branch: master
 
 - name: diego-github-releases
   type: github-release
