--- a/pipelines/release.yml
+++ b/pipelines/release.yml
@@ -48,6 +48,12 @@ resources:
     access_token: {{access-token}}
     drafts: true
 
+- name: cf-release
+  type: git
+  source:
+    uri: https://github.com/cloudfoundry/cf-release
+    branch: develop
+
 jobs:
 - name: create-final-release
   serial: true
@@ -168,4 +174,81 @@ jobs:
       body: github-release/body
       globs:
       - github-release/*.tgz
+
+- name: bump
+  plan:
+    - get: loggregator-master
+      passed: [create-final-release]
+    - get: cf-release
+    - task: bump-submodule
+      config:
+        image_resource:
+          type: docker-image
+          source:
+          - repository: loggregator/bosh10
+        platform: linux
+        params:
+          SSH_KEY: {{loggregator-key}}
+        NEW_VERSION: 78
+        inputs:
+        - name: loggregator-master
+        - name: cf-release
+        outputs:
+        - name: bump
+        run:
+          path: bash
+          args:
+            - -c
+            - |
+              #!/bin/bash
+              set -ex
+
+              res=$(curl canibump.cfapps.io -H "Accept: application/json")
+              can_bump="{\"can_i_bump\":true}"
+
+              if [ "${res}" != "${can_bump}" ]; then
+                echo "canibump.cfapps.io reported cf-release cannot be bumped"
+                echo "response ${can_bump}"
+                exit 1
+              fi
+
+              pushd loggregator-master
+                LOGGREGATOR_SHA=$(git rev-parse HEAD)
+              popd
+
+              pushd cf-release/src/loggregator
+                echo "Moving Loggregator in cf-release to ${LOGGREGATOR_SHA}"
+                git checkout ${LOGGREGATOR_SHA}
+              popd
+
+              pushd cf-release
+                echo "Deploying Release to Bosh Lite"
+                ./scripts/deploy-dev-release-to-bosh-lite
+
+                echo "Running CATs with most recent Loggregator"
+                bosh run errand acceptance_tests
+
+                echo "Configuring Git"
+                git config --global user.email "cf-loggregator@pivotal.io"
+                git config --global user.name "Loggregator CI"
+
+                echo "setup ssh for reading from github"
+                eval "$(ssh-agent -s)"
+                mkdir -p ~/.ssh
+                echo -e "Host github.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
+                ssh-add <(echo "$SSH_KEY")
+
+                echo "Bumping loggregator SHA in cf-release"
+                echo "New loggregator SHA is ${LOGGREGATOR_SHA}
+                git add src/loggregator
+
+                echo "Commiting with shortlog"
+                ./scripts/commit_with_shortlog
+              popd
+
+              cp -r cf-release bump
+  - put: cf-release
+    params:
+      repository: bump/cf-release
+      rebase: true
 
