Rebase after changing loggregator deployment vars
Signed-off-by: Warren Fernandes <wfernandes@pivotal.io>

--- a/pipelines/loggregator.yml
+++ b/pipelines/loggregator.yml
@@ -605,6 +605,7 @@ jobs:
   - put: deployments-loggregator-with-changes
     params:
       repository: committed-deployments-loggregator
+      rebase: true
 
 - name: cats
   serial: true
