--- a/pipelines/release.yml
+++ b/pipelines/release.yml
@@ -58,8 +58,9 @@ resources:
 - name: cf-release
   type: git
   source:
-    uri: https://github.com/cloudfoundry/cf-release
+    uri: git@github.com:cloudfoundry/cf-release
     branch: develop
+    private_key: {{loggregator-key}}
 
 jobs:
 - name: create-final-release
@@ -81,7 +82,7 @@ jobs:
         S3_ACCESS_KEY: {{s3-access-key}}
         S3_SECRET_KEY: {{s3-secret-key}}
         SSH_KEY: {{loggregator-key}}
-        NEW_VERSION: 78
+        NEW_VERSION: 79
       inputs:
       - name: loggregator-develop
       - name: loggregator-master
@@ -182,10 +183,10 @@ jobs:
       globs:
       - github-release/*.tgz
 
-- name: bump
+- name: test-and-bump-cf-release
   plan:
     - get: loggregator-master
-      # passed: [create-final-release]
+      passed: [create-final-release]
     - get: cf-release
     - get: deployments-loggregator
     - task: bump-submodule
@@ -200,7 +201,7 @@ jobs:
         - name: deployments-loggregator
         - name: cf-release
         outputs:
-        - name: bump
+        - name: cf-release-bump
         run:
           path: bash
           args:
@@ -225,6 +226,7 @@ jobs:
               pushd cf-release/src/loggregator
                 echo "Moving Loggregator in cf-release to ${LOGGREGATOR_SHA}"
                 git checkout ${LOGGREGATOR_SHA}
+                git submodule update --init --recursive
               popd
 
               password=$(cat deployments-loggregator/gcp/cf-release-bosh-lite/creds.yml |
@@ -238,7 +240,7 @@ jobs:
                 ./scripts/generate-bosh-lite-dev-manifest
                 bosh --parallel 10 sync blobs
                 bosh create release --name cf --force
-                bosh -t 10.102.0.6 -n upload release
+                bosh -t 10.102.0.6 -n upload release --rebase
                 bosh -t 10.102.0.6 -d bosh-lite/deployments/cf.yml -n deploy
 
                 echo "Running CATs with most recent Loggregator"
@@ -256,4 +258,8 @@ jobs:
                 ./scripts/commit_with_shortlog
               popd
 
-              cp -r cf-release bump
+              cp -r cf-release cf-release-bump
+    - put: cf-release
+      params:
+        rebase: true
+        repository: cf-release-bump
