Enable rebase when updating deployments-loggregator

--- a/pipelines/loggregator.yml
+++ b/pipelines/loggregator.yml
@@ -291,6 +291,7 @@ jobs:
   - put: deployments-loggregator-with-changes
     params:
       repository: updated-vars-store
+      rebase: true
 
 - name: cf-release-deploy
   serial: true
