--- a/pipelines/scalable-syslog.yml
+++ b/pipelines/scalable-syslog.yml
@@ -15,6 +15,25 @@ resources:
     uri: git@github.com:cloudfoundry-incubator/scalable-syslog
     private_key: {{cf-loggregator-oauth-bot-key}}
 
+- name: deployments-loggregator
+  type: git
+  source: &deployments_loggregator
+    uri: git@github.com:cloudfoundry/deployments-loggregator.git
+    branch: master
+    private_key: {{deployments-loggregator-key}}
+
+- name: consul-release
+  type: bosh-io-release
+  source:
+    repository: cloudfoundry-incubator/consul-release
+
+# This is here because concourse has a bug in which putting to a git resource
+# creates a new version that can trigger jobs even if the commit has [ci skip]
+# present.
+- name: deployments-loggregator-with-changes
+  type: git
+  source: *deployments_loggregator
+
 jobs:
 - name: tests
   serial: true
@@ -116,3 +135,114 @@ jobs:
     params:
       repository: bumped-scalable-syslog-release
       rebase: false
+
+- name: scalable-syslog-deploy
+  serial: true
+  plan:
+  - aggregate:
+    - get: scalable-syslog-release
+      passed:
+      - bump-release-submodule
+      trigger: true
+    - get: deployments-loggregator
+      trigger: false
+    - get: consul-release
+      trigger: false
+  - task: upload-scalable-syslog
+    config:
+      image_resource:
+        type: docker-image
+        source:
+          repository: relintdockerhubpushbot/cf-deployment-concourse-tasks
+      platform: linux
+      inputs:
+        - name: deployments-loggregator
+        - name: scalable-syslog-release
+        - name: consul-release
+      run:
+        path: bash
+        args:
+          - -c
+          - |
+            #!/bin/bash
+            set -eux
+            pushd deployments-loggregator/gcp/bbl
+              export BOSH_CLIENT=`bbl director-username`
+              export BOSH_CLIENT_SECRET=`bbl director-password`
+              export BOSH_CA_CERT=`bbl director-ca-cert`
+              export BOSH_ENVIRONMENT=`bbl director-address`
+            popd
+
+            for release in $(find consul-release -name '*.tgz'); do
+              bosh upload-release $release
+            done
+
+            pushd scalable-syslog-release
+                bosh create-release
+                bosh upload-release --rebase
+            popd
+
+  - task: deploy-scalable-syslog
+    config:
+      image_resource:
+        type: docker-image
+        source:
+          repository: relintdockerhubpushbot/cf-deployment-concourse-tasks
+      platform: linux
+      inputs:
+      - name: deployments-loggregator
+      - name: scalable-syslog-release
+      outputs:
+      - name: updated-deployments-loggregator
+      params:
+      run:
+        path: bash
+        args:
+          - -c
+          - |
+            #!/bin/bash
+            set -eux
+
+            pushd deployments-loggregator/gcp/bbl
+              export BOSH_CLIENT=`bbl director-username`
+              export BOSH_CLIENT_SECRET=`bbl director-password`
+              export BOSH_CA_CERT=`bbl director-ca-cert`
+              export BOSH_ENVIRONMENT=`bbl director-address`
+            popd
+
+            ss_dir="$PWD/scalable-syslog-release"
+            deployment_dir="$PWD/deployments-loggregator/gcp/coconut"
+
+            bosh -n -d scalablesyslog deploy \
+              --vars-store "$deployment_dir/scalable-syslog-vars.yml" \
+              --ops-file "$ss_dir/manifests/fake-ops.yml" \
+              --ops-file "$ss_dir/manifests/consul-ops.yml" \
+              "$ss_dir/manifests/scalable-syslog.yml"
+
+            rsync -ac deployments-loggregator/ updated-deployments-loggregator
+
+  - task: commit
+    config:
+      platform: linux
+      image_resource:
+        type: docker-image
+        source:
+          repository: loggregator/ubuntu-base
+      inputs:
+      - name: updated-deployments-loggregator
+      outputs:
+      - name: committed-deployments-loggregator
+      params:
+        SOURCE: updated-deployments-loggregator
+        PATHS: gcp/coconut/scalable-syslog-vars.yml
+        COMMIT_MESSAGE: "Update scalable-syslog vars store"
+        OUTPUT: committed-deployments-loggregator
+      run:
+        path: bash
+        args:
+        - -c
+        - {{commit}}
+  - put: deployments-loggregator-with-changes
+    params:
+      repository: committed-deployments-loggregator
+      rebase: true
