Fix broken recursive copy
Signed-off-by: Brady Love <blove@pivotal.io>

--- a/pipelines/release.yml
+++ b/pipelines/release.yml
@@ -256,7 +256,7 @@ jobs:
                 ./scripts/commit_with_shortlog
               popd
 
-              cp -r cf-release cf-release-bump
+              cp -r cf-release/* cf-release-bump/
     - put: cf-release
       params:
         rebase: true
