--- a/pipelines/loggregator.yml
+++ b/pipelines/loggregator.yml
@@ -237,7 +237,7 @@ jobs:
       BBL_STATE_DIR: gcp/bbl
       SYSTEM_DOMAIN: coconut.cf-app.com
       VARS_STORE_FILE: gcp/bbl/deployment-vars.yml
-      OPS_FILES: "gcp.yml clients.yml use-4-azs-for-router.yml"
+      OPS_FILES: "gcp.yml clients.yml use-4-azs-for-router.yml rlp.yml"
   - put: deployments-loggregator-with-changes
     params:
       repository: updated-vars-store
